test/neg/neg-reduce3.errc
upcxx::op_fast_... cannot be applied to this datatype
